# Arcindex

./: .gitignore  .npmignore  AGENTS.md  AI-ARTIFACT-CLEANUP-USAGE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  MIGRATION-PLAN.md  MIGRATION.md  README.md  ROADMAP.md  package.json  pyproject.toml
.bmad-core/: install-manifest.yaml
.claude/: artifact-exceptions.txt  development-reference.md
.claude/commands/: codex.md  prime.md  smart-commit.md
.codex/agents/: analyst.md  architect.md  dev.md  discovery.md  orchestrator.md  pm.md  prp-creator.md  qa.md  quality-gate.md
.codex/checklists/: architect-quality-gate.md  pm-quality-gate.md  prp-quality-gate.md
.codex/config/: codex-config.yaml
.codex/data/: quality-scoring-rubric.md  template-variable-extraction-protocol.md  vertical-slice-pattern.md
.codex/state/: workflow.json  (+1 more)
PRPs/: codex-orchestration-system.md
arcindex/: __init__.py  cli.py  requirements-dev.txt  requirements.txt
bridge/: __init__.py  adapter.py  app.py
docs/: CODEX-User-Guide.md  CODEX-Workflow-Guide.md  IMPLEMENTATION-SUMMARY.md  architecture-persistent-orchestrator.md  bmad-workflow-execution-analysis.md  brief.md  codex-architecture.md  codex-elicitation-orchestration-analysis.md  prd.md  swift-agent-removal-analysis.md
legacy/: AGENTS.md  CHANGELOG.md  CODEX-Workflow-Guide.md  IMPLEMENTATION-COMPLETE.md  ROADMAP.md  package-lock.json  package.json
lib/: IMPLEMENTATION-SUMMARY.md  UPDATER-GUIDE.md  compatibility-checker.js  file-manager.cjs  file-manager.js  hash.cjs  hash.js  installer.js  manifest.js  manifest.test.js  menu.cjs  state-preserver.cjs  state-preserver.test.cjs  state-preserver.test.js  test-installer.js  updater.js  verify-implementation.cjs  verify-implementation.js  verify-updater.js
scripts/: __init__.py  codex_mcp.py
(+195 files in other folders)
